cmake_minimum_required (VERSION 2.8)
project(leetCode)

set(CMAKE_CXX_STANDARD 11)
add_compile_options(-std=c++11 -Wall)

if(NOT CMAKE_BUILD_TYPE)
	message(STATUS "No build type selected, default to Release")
	set(CMAKE_BUILD_TYPE "Release")
endif()

 set(SOURCES
 	src/audition0102.h
	src/audition0109.h
 	src/audition0406.h
 	src/audition1705.h
 	src/audition1709.h
 	src/audition1711.h
	src/audition1719.h
 	src/leetcode2.h
 	src/leetcode3.h
 	src/leetcode4.h
 	src/leetcode5.h
 	src/leetcode9.h
 	src/leetcode10.h
 	src/leetcode11.h
 	src/leetcode13.h
 	src/leetcode14.h
 	src/leetcode15.h
 	src/leetcode17.h
 	src/leetcode19.h
 	src/leetcode20.h
 	src/leetcode21.h
 	src/leetcode22.h
 	src/leetcode23.h
 	src/leetcode30.h
 	src/leetcode31.h
 	src/leetcode42.h
 	src/leetcode46.h
 	src/leetcode49.h
 	src/leetcode94.h
	src/leetcode146.h
	src/leetcode171.h
 	src/leetcode174.h
 	src/leetcode215.h
 	src/leetcode287.h
 	src/leetcode324.h
 	src/leetcode326.h
 	src/leetcode427.h
 	src/leetcode434.h
 	src/leetcode436.h
 	src/leetcode450.h
 	src/leetcode462.h
 	src/leetcode464.h
 	src/leetcode467.h
 	src/leetcode468.h
 	src/leetcode473.h
 	src/leetcode481.h
 	src/leetcode497.h
 	src/leetcode498.h
 	src/leetcode508.h
 	src/leetcode513.h
 	src/leetcode516.h
 	src/leetcode522.h
 	src/leetcode532.h
 	src/leetcode535.h
 	src/leetcode556.h
 	src/leetcode558.h
 	src/leetcode565.h
 	src/leetcode592.h
 	src/leetcode622.h
 	src/leetcode623.h
 	src/leetcode636.h
	src/leetcode640.h
	src/leetcode641.h
 	src/leetcode646.h
 	src/leetcode647.h
	src/leetcode652.h
	src/leetcode654.h
	src/leetcode655.h
	src/leetcode658.h
 	src/leetcode662.h
 	src/leetcode667.h
 	src/leetcode668.h
	src/leetcode669.h
 	src/leetcode672.h
 	src/leetcode675.h
 	src/leetcode676.h
	src/leetcode687.h
 	src/leetcode698.h
 	src/leetcode699.h
 	src/leetcode707.h
 	src/leetcode715.h
 	src/leetcode719.h
 	src/leetcode729.h
 	src/leetcode730.h
 	src/leetcode731.h
 	src/leetcode732.h 
 	src/leetcode735.h
 	src/leetcode741.h
 	src/leetcode745.h
 	src/leetcode747.h
 	src/leetcode749.h
 	src/leetcode753.h
 	src/leetcode754.h
 	src/leetcode757.h
 	src/leetcode761.h
 	src/leetcode762.h
 	src/leetcode764.h
 	src/leetcode768.h
 	src/leetcode769.h
 	src/leetcode775.h
 	src/leetcode777.h
 	src/leetcode779.h
 	src/leetcode782.h
 	src/leetcode784.h
	src/leetcode788.h
	src/leetcode790.h
	src/leetcode791.h
	src/leetcode792.h
	src/leetcode795.h
	src/leetcode799.h
 	src/leetcode801.h
 	src/leetcode805.h
 	src/leetcode808.h
 	src/leetcode809.h
 	src/leetcode811.h
 	src/leetcode813.h
 	src/leetcode814.h
 	src/leetcode816.h
 	src/leetcode817.h
 	src/leetcode827.h
 	src/leetcode828.h
 	src/leetcode829.h
	src/leetcode850.h
	src/leetcode854.h
	src/leetcode855.h
	src/leetcode856.h
	src/leetcode857.h
	src/leetcode862.h
	src/leetcode870.h
	src/leetcode871.h
 	src/leetcode875.h
 	src/leetcode878.h
 	src/leetcode882.h
 	src/leetcode886.h
 	src/leetcode890.h
    src/leetcode891.h
    src/leetcode895.h
 	src/leetcode899.h
 	src/leetcode901.h 
 	src/leetcode902.h 
 	src/leetcode904.h 
	src/leetcode907.h 
 	src/leetcode915.h 
 	src/leetcode919.h 
 	src/leetcode926.h
	src/leetcode927.h
	src/leetcode934.h
 	src/leetcode940.h
 	src/leetcode942.h
	src/leetcode946.h
 	src/leetcode951.h
 	src/leetcode953.h
 	src/leetcode961.h
 	src/leetcode965.h
 	src/leetcode982.h
	src/leetcode998.h
 	src/leetcode1021.h
 	src/leetcode1022.h
 	src/leetcode1037.h
 	src/leetcode1051.h
 	src/leetcode1052.h
 	src/leetcode1089.h
 	src/leetcode1096.h
 	src/leetcode1106.h
 	src/leetcode1108.h
 	src/leetcode1124.h
 	src/leetcode1129.h
 	src/leetcode1138.h
 	src/leetcode1139.h
 	src/leetcode1140.h
 	src/leetcode1144.h
 	src/leetcode1145.h
 	src/leetcode1162.h
 	src/leetcode1172.h
 	src/leetcode1175.h
 	src/leetcode1184.h
 	src/leetcode1185.h
 	src/leetcode1200.h
	src/leetcode1206.h
	src/leetcode1210.h
	src/leetcode1217.h
	src/leetcode1223.h
	src/leetcode1224.h
	src/leetcode1233.h
	src/leetcode1234.h
	src/leetcode1235.h
	src/leetcode1237.h
	src/leetcode1238.h
	src/leetcode1247.h
 	src/leetcode1250.h
 	src/leetcode1252.h
 	src/leetcode1255.h
 	src/leetcode1260.h
	src/leetcode1282.h
 	src/leetcode1302.h
 	src/leetcode1326.h
 	src/leetcode1331.h
 	src/leetcode1374.h
 	src/leetcode1399.h
 	src/leetcode1403.h
 	src/leetcode1408.h
 	src/leetcode1413.h
	src/leetcode1417.h
	src/leetcode1422.h
	src/leetcode1441.h
	src/leetcode1450.h
	src/leetcode1455.h
	src/leetcode1460.h
	src/leetcode1464.h
	src/leetcode1470.h
	src/leetcode1475.h
	src/leetcode1487.h
	src/leetcode1582.h
	src/leetcode1590.h
	src/leetcode1592.h
	src/leetcode1598.h
	src/leetcode1599.h 
	src/leetcode1604.h
	src/leetcode1605.h
	src/leetcode1606.h
	src/leetcode1608.h
	src/leetcode1620.h
	src/leetcode1624.h
	src/leetcode1632.h
	src/leetcode1636.h
	src/leetcode1640.h
	src/leetcode1652.h
	src/leetcode1653.h
	src/leetcode1656.h
	src/leetcode1658.h
	src/leetcode1662.h
	src/leetcode1663.h
	src/leetcode1664.h
	src/leetcode1668.h
	src/leetcode1669.h
	src/leetcode1678.h
	src/leetcode1684.h
	src/leetcode1687.h
	src/leetcode1691.h
	src/leetcode1694.h
	src/leetcode1697.h
	src/leetcode1700.h
	src/leetcode1703.h
	src/leetcode1704.h
	src/leetcode1710.h
 	src/leetcode1728.h
    src/leetcode1732.h
    src/leetcode1739.h
    src/leetcode1742.h
    src/leetcode1750.h
    src/leetcode1752.h
    src/leetcode1753.h
    src/leetcode1754.h
    src/leetcode1758.h
    src/leetcode1759.h
	src/leetcode1760.h
	src/leetcode1764.h
	src/leetcode1768.h
	src/leetcode1769.h
	src/leetcode1773.h
	src/leetcode1774.h
	src/leetcode1775.h
	src/leetcode1779.h
 	src/leetcode1780.h
 	src/leetcode1781.h
 	src/leetcode1784.h
 	src/leetcode1785.h
 	src/leetcode1786.h
 	src/leetcode1790.h
 	src/leetcode1792.h
 	src/leetcode1796.h
 	src/leetcode1797.h
 	src/leetcode1798.h
 	src/leetcode1799.h
 	src/leetcode1800.h
 	src/leetcode1801.h
 	src/leetcode1802.h
 	src/leetcode1803.h
 	src/leetcode1805.h
 	src/leetcode1806.h
 	src/leetcode1807.h
 	src/leetcode1812.h
 	src/leetcode1813.h
 	src/leetcode1814.h
 	src/leetcode1815.h
 	src/leetcode1817.h
 	src/leetcode1819.h
 	src/leetcode1822.h
 	src/leetcode1824.h
 	src/leetcode1825.h
 	src/leetcode1827.h
 	src/leetcode1828.h
 	src/leetcode1832.h
 	src/leetcode1909.h
 	src/leetcode1945.h
 	src/leetcode1971.h
 	src/leetcode2011.h
 	src/leetcode2027.h
 	src/leetcode2032.h
 	src/leetcode2037.h
 	src/leetcode2042.h
 	src/leetcode2104.h
 	src/leetcode2119.h
 	src/leetcode2180.h
 	src/leetcode2185.h
 	src/leetcode2283.h
 	src/leetcode2287.h
 	src/leetcode2293.h
 	src/leetcode2299.h
 	src/leetcode2303.h
 	src/leetcode2309.h
 	src/leetcode2315.h
 	src/leetcode2319.h
 	src/leetcode2325.h
 	src/leetcode2331.h
 	src/leetcode2335.h
 	src/leetcode2341.h
 	src/leetcode2347.h
 	src/leetcode2351.h
 	src/leetcode2357.h
 	src/leetcode2363.h
 	src/leetcode2379.h
 	src/leetcode2383.h
 	src/leetcode6283.h
 	src/leetcode6284.h
 	src/leetcode6285.h
 	src/leetcode6306.h
 	src/leetcode6307.h
 	src/leetcode6308.h
 	src/leetcode6309.h
 	src/leetcode6310.h
 	src/leetcode6315.h
 	src/leetcode6316.h
 	src/leetcode6317.h
 	src/leetcode6318.h
 	src/leetcode6362.h
 	src/leetcode6364.h
 	src/leetcode6365.h
 	src/leetcode6366.h
 	src/leetcode6367.h
 	src/leetcode6368.h
 	src/leetcode6369.h
 	src/swordOffer047.h
 	src/swordOfferII041.h
 	src/swordOfferII114.h
 	src/swordOfferII115.h
 	src/acmtest.h
 	src/acmtest.cpp
    src/leetcodetest.h
 	src/leetcodetest.cpp
 	src/main.cpp)

link_directories(${PROJECT_SOURCE_DIR}/lib)
add_executable(leetCode ${SOURCES})
#target_include_directories(leetCode PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
